unpackaged/main/default/objects/project_cloud__Time_Entry__c/project_cloud__Time_Entry__c.object-meta.xml
<CustomObject>
    <description>Individual time entries of users in your system</description>
    <label>Deprecated (Time Entry)</label>
    <nameField>
        <displayFormat>TE-{0000000000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deprecated (Time Entries)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>