unpackaged/main/default/objects/project_cloud__Time_Entry__c/fields/project_cloud__ActivityId__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__ActivityId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Lookup relationships against activities (tasks and events) don&#39;t exist.
A reference to the allocation that spawned this Time Entry is required to adjust the time entry when the allocation is modified</description>
    <externalId>true</externalId>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Deprecated (ActivityId)</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>