unpackaged/main/default/objects/project_cloud__Time_Entry__c/fields/project_cloud__Completed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Estimation by the user about how much of the task has been completed. I.e the total progress of the task</description>
    <inlineHelpText>The total estimated progress as a percentage after this time has been invested</inlineHelpText>
    <label>Completed Estimation</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>