unpackaged/main/default/objects/project_cloud__Time_Entry__c/fields/project_cloud__Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date the Time Entry represents. There is a validation rule that restricts the Date value that can be entered so the Time Entry falls inside the bounds of the Timesheet</description>
    <inlineHelpText>The date the Time Entry represents</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>