unpackaged/main/default/objects/project_cloud__Time_Entry__c/fields/project_cloud__Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours__c</fullName>
    <defaultValue>null</defaultValue>
    <description>How many hours the Project Task was worked on</description>
    <inlineHelpText>Ensure that when entering values. The number is divisible by 0.25 making the hours entered 15 minute blocks. e.g 1.75 is 1 hour 45 minutes</inlineHelpText>
    <label>Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>