unpackaged/main/default/objects/project_cloud__Time_Entry__c/fields/project_cloud__Issue__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>project_cloud__Issue__c</referenceTo>
    <relationshipLabel>Deprecated(Time Entries)</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>