unpackaged/main/default/objects/project_cloud__Time_Entry__c/fields/project_cloud__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Task__c</fullName>
    <description>The Project Task the Time Entry is for</description>
    <inlineHelpText>The Project Task the Time Entry is for</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Deprecated(Time Entries)</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>