unpackaged/main/default/objects/project_cloud__Time_Entry__c/fields/project_cloud__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Timesheet__c</fullName>
    <description>The Timesheet the Time Entry is part of. There is a validation rule that restricts the Date value that can be entered so the Time Entry falls inside the bounds of the Timesheet</description>
    <inlineHelpText>The Timesheet the Time Entry is part of</inlineHelpText>
    <label>Timesheet</label>
    <referenceTo>project_cloud__Timesheet__c</referenceTo>
    <relationshipLabel>Deprecated(Time Entries)</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>